--- a/torch/_C/__init__.pyi.in
+++ b/torch/_C/__init__.pyi.in
@@ -1225,6 +1225,8 @@ def is_autocast_enabled() -> _bool: ...
 def clear_autocast_cache() -> None: ...
 def set_autocast_cpu_enabled(enabled: _bool) -> None: ...
 def is_autocast_cpu_enabled() -> _bool: ...
+def is_autocast_mps_enabled() -> _bool: ...
+def set_autocast_mps_enabled(enabled: _bool) -> None: ...
 def _is_any_autocast_enabled() -> _bool: ...
 def set_autocast_cpu_dtype(dtype: _dtype) -> None: ...
 def set_autocast_gpu_dtype(dtype: _dtype) -> None: ...
